xpath/grammars/path_eval/y.output

state 0
	$accept: .top $end 

	NUM  shift 25
	DOTDOT  shift 37
	DBLSLASH  shift 38
	FUNC  shift 26
	NODETYPE  shift 27
	AXISNAME  shift 33
	LITERAL  shift 24
	NAMETEST  shift 35
	'-'  shift 11
	'/'  shift 31
	'('  shift 23
	'.'  shift 36
	'@'  shift 39
	.  error

	top  goto 1
	Expr  goto 2
	OrExpr  goto 3
	AndExpr  goto 4
	EqualityExpr  goto 5
	RelationalExpr  goto 6
	AdditiveExpr  goto 7
	MultiplicativeExpr  goto 8
	UnaryExpr  goto 9
	UnionExpr  goto 10
	PathExpr  goto 12
	LocationPath  goto 13
	FilterExpr  goto 14
	CompoundFilterExpr  goto 15
	RelativeLocationPath  goto 16
	DoubleSlash  goto 32
	PrimaryExpr  goto 18
	AbsoluteLocationPath  goto 17
	Root  goto 21
	AbbreviatedAbsoluteLocationPath  goto 22
	Step  goto 19
	AbbreviatedRelativeLocationPath  goto 20
	AxisSpecifier  goto 28
	NodeTest  goto 29
	AbbreviatedStep  goto 30
	AbbreviatedAxisSpecifier  goto 34

state 1
	$accept:  top.$end 

	$end  accept
	.  error


state 2
	top:  Expr.    (1)

	.  reduce 1 (src line 66)


state 3
	Expr:  OrExpr.    (2)
	OrExpr:  OrExpr.OR AndExpr 

	OR  shift 40
	.  reduce 2 (src line 74)


state 4
	OrExpr:  AndExpr.    (3)
	AndExpr:  AndExpr.AND EqualityExpr 

	AND  shift 41
	.  reduce 3 (src line 77)


state 5
	AndExpr:  EqualityExpr.    (5)
	EqualityExpr:  EqualityExpr.EQ RelationalExpr 
	EqualityExpr:  EqualityExpr.NE RelationalExpr 

	NE  shift 43
	EQ  shift 42
	.  reduce 5 (src line 81)


state 6
	EqualityExpr:  RelationalExpr.    (7)
	RelationalExpr:  RelationalExpr.LT AdditiveExpr 
	RelationalExpr:  RelationalExpr.GT AdditiveExpr 
	RelationalExpr:  RelationalExpr.LE AdditiveExpr 
	RelationalExpr:  RelationalExpr.GE AdditiveExpr 

	GT  shift 45
	GE  shift 47
	LT  shift 44
	LE  shift 46
	.  reduce 7 (src line 85)


state 7
	RelationalExpr:  AdditiveExpr.    (10)
	AdditiveExpr:  AdditiveExpr.'+' MultiplicativeExpr 
	AdditiveExpr:  AdditiveExpr.'-' MultiplicativeExpr 

	'+'  shift 48
	'-'  shift 49
	.  reduce 10 (src line 90)


state 8
	AdditiveExpr:  MultiplicativeExpr.    (15)
	MultiplicativeExpr:  MultiplicativeExpr.'*' UnaryExpr 
	MultiplicativeExpr:  MultiplicativeExpr.DIV UnaryExpr 
	MultiplicativeExpr:  MultiplicativeExpr.MOD UnaryExpr 

	'*'  shift 50
	DIV  shift 51
	MOD  shift 52
	.  reduce 15 (src line 97)


state 9
	MultiplicativeExpr:  UnaryExpr.    (18)

	.  reduce 18 (src line 102)


state 10
	UnaryExpr:  UnionExpr.    (22)
	UnionExpr:  UnionExpr.'|' PathExpr 

	'|'  shift 53
	.  reduce 22 (src line 108)


state 11
	UnaryExpr:  '-'.UnaryExpr 

	NUM  shift 25
	DOTDOT  shift 37
	DBLSLASH  shift 38
	FUNC  shift 26
	NODETYPE  shift 27
	AXISNAME  shift 33
	LITERAL  shift 24
	NAMETEST  shift 35
	'-'  shift 11
	'/'  shift 31
	'('  shift 23
	'.'  shift 36
	'@'  shift 39
	.  error

	UnaryExpr  goto 54
	UnionExpr  goto 10
	PathExpr  goto 12
	LocationPath  goto 13
	FilterExpr  goto 14
	CompoundFilterExpr  goto 15
	RelativeLocationPath  goto 16
	DoubleSlash  goto 32
	PrimaryExpr  goto 18
	AbsoluteLocationPath  goto 17
	Root  goto 21
	AbbreviatedAbsoluteLocationPath  goto 22
	Step  goto 19
	AbbreviatedRelativeLocationPath  goto 20
	AxisSpecifier  goto 28
	NodeTest  goto 29
	AbbreviatedStep  goto 30
	AbbreviatedAxisSpecifier  goto 34

state 12
	UnionExpr:  PathExpr.    (24)

	.  reduce 24 (src line 112)


state 13
	PathExpr:  LocationPath.    (26)

	.  reduce 26 (src line 116)


state 14
	PathExpr:  FilterExpr.    (27)
	CompoundFilterExpr:  FilterExpr.    (30)
	FilterExpr:  FilterExpr.Predicate 

	DBLSLASH  reduce 30 (src line 134)
	'/'  reduce 30 (src line 134)
	'['  shift 57
	.  reduce 27 (src line 121)

	Predicate  goto 55
	PredicateStart  goto 56

state 15
	PathExpr:  CompoundFilterExpr.'/' RelativeLocationPath 
	PathExpr:  CompoundFilterExpr.DoubleSlash RelativeLocationPath 

	DBLSLASH  shift 38
	'/'  shift 58
	.  error

	DoubleSlash  goto 59

state 16
	LocationPath:  RelativeLocationPath.    (41)
	RelativeLocationPath:  RelativeLocationPath.'/' Step 
	AbbreviatedRelativeLocationPath:  RelativeLocationPath.DoubleSlash Step 

	DBLSLASH  shift 38
	'/'  shift 60
	.  reduce 41 (src line 154)

	DoubleSlash  goto 61

state 17
	LocationPath:  AbsoluteLocationPath.    (42)

	.  reduce 42 (src line 156)


state 18
	FilterExpr:  PrimaryExpr.    (31)

	.  reduce 31 (src line 137)


state 19
	RelativeLocationPath:  Step.    (47)

	.  reduce 47 (src line 175)


state 20
	RelativeLocationPath:  AbbreviatedRelativeLocationPath.    (49)

	.  reduce 49 (src line 178)


state 21
	AbsoluteLocationPath:  Root.    (43)
	AbsoluteLocationPath:  Root.RelativeLocationPath 

	DOTDOT  shift 37
	AXISNAME  shift 33
	NAMETEST  shift 35
	'.'  shift 36
	'@'  shift 39
	.  reduce 43 (src line 158)

	RelativeLocationPath  goto 62
	Step  goto 19
	AbbreviatedRelativeLocationPath  goto 20
	AxisSpecifier  goto 28
	NodeTest  goto 29
	AbbreviatedStep  goto 30
	AbbreviatedAxisSpecifier  goto 34

state 22
	AbsoluteLocationPath:  AbbreviatedAbsoluteLocationPath.    (45)

	.  reduce 45 (src line 161)


state 23
	PrimaryExpr:  '('.Expr ')' 

	NUM  shift 25
	DOTDOT  shift 37
	DBLSLASH  shift 38
	FUNC  shift 26
	NODETYPE  shift 27
	AXISNAME  shift 33
	LITERAL  shift 24
	NAMETEST  shift 35
	'-'  shift 11
	'/'  shift 31
	'('  shift 23
	'.'  shift 36
	'@'  shift 39
	.  error

	Expr  goto 63
	OrExpr  goto 3
	AndExpr  goto 4
	EqualityExpr  goto 5
	RelationalExpr  goto 6
	AdditiveExpr  goto 7
	MultiplicativeExpr  goto 8
	UnaryExpr  goto 9
	UnionExpr  goto 10
	PathExpr  goto 12
	LocationPath  goto 13
	FilterExpr  goto 14
	CompoundFilterExpr  goto 15
	RelativeLocationPath  goto 16
	DoubleSlash  goto 32
	PrimaryExpr  goto 18
	AbsoluteLocationPath  goto 17
	Root  goto 21
	AbbreviatedAbsoluteLocationPath  goto 22
	Step  goto 19
	AbbreviatedRelativeLocationPath  goto 20
	AxisSpecifier  goto 28
	NodeTest  goto 29
	AbbreviatedStep  goto 30
	AbbreviatedAxisSpecifier  goto 34

state 24
	PrimaryExpr:  LITERAL.    (34)

	.  reduce 34 (src line 143)


state 25
	PrimaryExpr:  NUM.    (35)

	.  reduce 35 (src line 144)


state 26
	PrimaryExpr:  FUNC.'(' ')' 
	PrimaryExpr:  FUNC.'(' Expr ')' 
	PrimaryExpr:  FUNC.'(' Expr ',' Expr ')' 
	PrimaryExpr:  FUNC.'(' Expr ',' Expr ',' Expr ')' 

	'('  shift 64
	.  error


state 27
	PrimaryExpr:  NODETYPE.    (40)

	.  reduce 40 (src line 149)


state 28
	Step:  AxisSpecifier.NodeTest PredicateSet 
	Step:  AxisSpecifier.NodeTest 

	NAMETEST  shift 35
	.  error

	NodeTest  goto 65

state 29
	Step:  NodeTest.PredicateSet 
	Step:  NodeTest.    (53)

	'['  shift 57
	.  reduce 53 (src line 191)

	Predicate  goto 67
	PredicateSet  goto 66
	PredicateStart  goto 56

state 30
	Step:  AbbreviatedStep.    (54)

	.  reduce 54 (src line 192)


state 31
	Root:  '/'.    (46)

	.  reduce 46 (src line 169)


state 32
	AbbreviatedAbsoluteLocationPath:  DoubleSlash.RelativeLocationPath 

	DOTDOT  shift 37
	AXISNAME  shift 33
	NAMETEST  shift 35
	'.'  shift 36
	'@'  shift 39
	.  error

	RelativeLocationPath  goto 68
	Step  goto 19
	AbbreviatedRelativeLocationPath  goto 20
	AxisSpecifier  goto 28
	NodeTest  goto 29
	AbbreviatedStep  goto 30
	AbbreviatedAxisSpecifier  goto 34

state 33
	AxisSpecifier:  AXISNAME.DBLCOLON 

	DBLCOLON  shift 69
	.  error


state 34
	AxisSpecifier:  AbbreviatedAxisSpecifier.    (56)

	.  reduce 56 (src line 199)


state 35
	NodeTest:  NAMETEST.    (57)

	.  reduce 57 (src line 201)


state 36
	AbbreviatedStep:  '.'.    (66)

	.  reduce 66 (src line 232)


state 37
	AbbreviatedStep:  DOTDOT.    (67)

	.  reduce 67 (src line 237)


state 38
	DoubleSlash:  DBLSLASH.    (69)

	.  reduce 69 (src line 249)


state 39
	AbbreviatedAxisSpecifier:  '@'.    (68)

	.  reduce 68 (src line 242)


state 40
	OrExpr:  OrExpr OR.AndExpr 

	NUM  shift 25
	DOTDOT  shift 37
	DBLSLASH  shift 38
	FUNC  shift 26
	NODETYPE  shift 27
	AXISNAME  shift 33
	LITERAL  shift 24
	NAMETEST  shift 35
	'-'  shift 11
	'/'  shift 31
	'('  shift 23
	'.'  shift 36
	'@'  shift 39
	.  error

	AndExpr  goto 70
	EqualityExpr  goto 5
	RelationalExpr  goto 6
	AdditiveExpr  goto 7
	MultiplicativeExpr  goto 8
	UnaryExpr  goto 9
	UnionExpr  goto 10
	PathExpr  goto 12
	LocationPath  goto 13
	FilterExpr  goto 14
	CompoundFilterExpr  goto 15
	RelativeLocationPath  goto 16
	DoubleSlash  goto 32
	PrimaryExpr  goto 18
	AbsoluteLocationPath  goto 17
	Root  goto 21
	AbbreviatedAbsoluteLocationPath  goto 22
	Step  goto 19
	AbbreviatedRelativeLocationPath  goto 20
	AxisSpecifier  goto 28
	NodeTest  goto 29
	AbbreviatedStep  goto 30
	AbbreviatedAxisSpecifier  goto 34

state 41
	AndExpr:  AndExpr AND.EqualityExpr 

	NUM  shift 25
	DOTDOT  shift 37
	DBLSLASH  shift 38
	FUNC  shift 26
	NODETYPE  shift 27
	AXISNAME  shift 33
	LITERAL  shift 24
	NAMETEST  shift 35
	'-'  shift 11
	'/'  shift 31
	'('  shift 23
	'.'  shift 36
	'@'  shift 39
	.  error

	EqualityExpr  goto 71
	RelationalExpr  goto 6
	AdditiveExpr  goto 7
	MultiplicativeExpr  goto 8
	UnaryExpr  goto 9
	UnionExpr  goto 10
	PathExpr  goto 12
	LocationPath  goto 13
	FilterExpr  goto 14
	CompoundFilterExpr  goto 15
	RelativeLocationPath  goto 16
	DoubleSlash  goto 32
	PrimaryExpr  goto 18
	AbsoluteLocationPath  goto 17
	Root  goto 21
	AbbreviatedAbsoluteLocationPath  goto 22
	Step  goto 19
	AbbreviatedRelativeLocationPath  goto 20
	AxisSpecifier  goto 28
	NodeTest  goto 29
	AbbreviatedStep  goto 30
	AbbreviatedAxisSpecifier  goto 34

state 42
	EqualityExpr:  EqualityExpr EQ.RelationalExpr 

	NUM  shift 25
	DOTDOT  shift 37
	DBLSLASH  shift 38
	FUNC  shift 26
	NODETYPE  shift 27
	AXISNAME  shift 33
	LITERAL  shift 24
	NAMETEST  shift 35
	'-'  shift 11
	'/'  shift 31
	'('  shift 23
	'.'  shift 36
	'@'  shift 39
	.  error

	RelationalExpr  goto 72
	AdditiveExpr  goto 7
	MultiplicativeExpr  goto 8
	UnaryExpr  goto 9
	UnionExpr  goto 10
	PathExpr  goto 12
	LocationPath  goto 13
	FilterExpr  goto 14
	CompoundFilterExpr  goto 15
	RelativeLocationPath  goto 16
	DoubleSlash  goto 32
	PrimaryExpr  goto 18
	AbsoluteLocationPath  goto 17
	Root  goto 21
	AbbreviatedAbsoluteLocationPath  goto 22
	Step  goto 19
	AbbreviatedRelativeLocationPath  goto 20
	AxisSpecifier  goto 28
	NodeTest  goto 29
	AbbreviatedStep  goto 30
	AbbreviatedAxisSpecifier  goto 34

state 43
	EqualityExpr:  EqualityExpr NE.RelationalExpr 

	NUM  shift 25
	DOTDOT  shift 37
	DBLSLASH  shift 38
	FUNC  shift 26
	NODETYPE  shift 27
	AXISNAME  shift 33
	LITERAL  shift 24
	NAMETEST  shift 35
	'-'  shift 11
	'/'  shift 31
	'('  shift 23
	'.'  shift 36
	'@'  shift 39
	.  error

	RelationalExpr  goto 73
	AdditiveExpr  goto 7
	MultiplicativeExpr  goto 8
	UnaryExpr  goto 9
	UnionExpr  goto 10
	PathExpr  goto 12
	LocationPath  goto 13
	FilterExpr  goto 14
	CompoundFilterExpr  goto 15
	RelativeLocationPath  goto 16
	DoubleSlash  goto 32
	PrimaryExpr  goto 18
	AbsoluteLocationPath  goto 17
	Root  goto 21
	AbbreviatedAbsoluteLocationPath  goto 22
	Step  goto 19
	AbbreviatedRelativeLocationPath  goto 20
	AxisSpecifier  goto 28
	NodeTest  goto 29
	AbbreviatedStep  goto 30
	AbbreviatedAxisSpecifier  goto 34

state 44
	RelationalExpr:  RelationalExpr LT.AdditiveExpr 

	NUM  shift 25
	DOTDOT  shift 37
	DBLSLASH  shift 38
	FUNC  shift 26
	NODETYPE  shift 27
	AXISNAME  shift 33
	LITERAL  shift 24
	NAMETEST  shift 35
	'-'  shift 11
	'/'  shift 31
	'('  shift 23
	'.'  shift 36
	'@'  shift 39
	.  error

	AdditiveExpr  goto 74
	MultiplicativeExpr  goto 8
	UnaryExpr  goto 9
	UnionExpr  goto 10
	PathExpr  goto 12
	LocationPath  goto 13
	FilterExpr  goto 14
	CompoundFilterExpr  goto 15
	RelativeLocationPath  goto 16
	DoubleSlash  goto 32
	PrimaryExpr  goto 18
	AbsoluteLocationPath  goto 17
	Root  goto 21
	AbbreviatedAbsoluteLocationPath  goto 22
	Step  goto 19
	AbbreviatedRelativeLocationPath  goto 20
	AxisSpecifier  goto 28
	NodeTest  goto 29
	AbbreviatedStep  goto 30
	AbbreviatedAxisSpecifier  goto 34

state 45
	RelationalExpr:  RelationalExpr GT.AdditiveExpr 

	NUM  shift 25
	DOTDOT  shift 37
	DBLSLASH  shift 38
	FUNC  shift 26
	NODETYPE  shift 27
	AXISNAME  shift 33
	LITERAL  shift 24
	NAMETEST  shift 35
	'-'  shift 11
	'/'  shift 31
	'('  shift 23
	'.'  shift 36
	'@'  shift 39
	.  error

	AdditiveExpr  goto 75
	MultiplicativeExpr  goto 8
	UnaryExpr  goto 9
	UnionExpr  goto 10
	PathExpr  goto 12
	LocationPath  goto 13
	FilterExpr  goto 14
	CompoundFilterExpr  goto 15
	RelativeLocationPath  goto 16
	DoubleSlash  goto 32
	PrimaryExpr  goto 18
	AbsoluteLocationPath  goto 17
	Root  goto 21
	AbbreviatedAbsoluteLocationPath  goto 22
	Step  goto 19
	AbbreviatedRelativeLocationPath  goto 20
	AxisSpecifier  goto 28
	NodeTest  goto 29
	AbbreviatedStep  goto 30
	AbbreviatedAxisSpecifier  goto 34

state 46
	RelationalExpr:  RelationalExpr LE.AdditiveExpr 

	NUM  shift 25
	DOTDOT  shift 37
	DBLSLASH  shift 38
	FUNC  shift 26
	NODETYPE  shift 27
	AXISNAME  shift 33
	LITERAL  shift 24
	NAMETEST  shift 35
	'-'  shift 11
	'/'  shift 31
	'('  shift 23
	'.'  shift 36
	'@'  shift 39
	.  error

	AdditiveExpr  goto 76
	MultiplicativeExpr  goto 8
	UnaryExpr  goto 9
	UnionExpr  goto 10
	PathExpr  goto 12
	LocationPath  goto 13
	FilterExpr  goto 14
	CompoundFilterExpr  goto 15
	RelativeLocationPath  goto 16
	DoubleSlash  goto 32
	PrimaryExpr  goto 18
	AbsoluteLocationPath  goto 17
	Root  goto 21
	AbbreviatedAbsoluteLocationPath  goto 22
	Step  goto 19
	AbbreviatedRelativeLocationPath  goto 20
	AxisSpecifier  goto 28
	NodeTest  goto 29
	AbbreviatedStep  goto 30
	AbbreviatedAxisSpecifier  goto 34

state 47
	RelationalExpr:  RelationalExpr GE.AdditiveExpr 

	NUM  shift 25
	DOTDOT  shift 37
	DBLSLASH  shift 38
	FUNC  shift 26
	NODETYPE  shift 27
	AXISNAME  shift 33
	LITERAL  shift 24
	NAMETEST  shift 35
	'-'  shift 11
	'/'  shift 31
	'('  shift 23
	'.'  shift 36
	'@'  shift 39
	.  error

	AdditiveExpr  goto 77
	MultiplicativeExpr  goto 8
	UnaryExpr  goto 9
	UnionExpr  goto 10
	PathExpr  goto 12
	LocationPath  goto 13
	FilterExpr  goto 14
	CompoundFilterExpr  goto 15
	RelativeLocationPath  goto 16
	DoubleSlash  goto 32
	PrimaryExpr  goto 18
	AbsoluteLocationPath  goto 17
	Root  goto 21
	AbbreviatedAbsoluteLocationPath  goto 22
	Step  goto 19
	AbbreviatedRelativeLocationPath  goto 20
	AxisSpecifier  goto 28
	NodeTest  goto 29
	AbbreviatedStep  goto 30
	AbbreviatedAxisSpecifier  goto 34

state 48
	AdditiveExpr:  AdditiveExpr '+'.MultiplicativeExpr 

	NUM  shift 25
	DOTDOT  shift 37
	DBLSLASH  shift 38
	FUNC  shift 26
	NODETYPE  shift 27
	AXISNAME  shift 33
	LITERAL  shift 24
	NAMETEST  shift 35
	'-'  shift 11
	'/'  shift 31
	'('  shift 23
	'.'  shift 36
	'@'  shift 39
	.  error

	MultiplicativeExpr  goto 78
	UnaryExpr  goto 9
	UnionExpr  goto 10
	PathExpr  goto 12
	LocationPath  goto 13
	FilterExpr  goto 14
	CompoundFilterExpr  goto 15
	RelativeLocationPath  goto 16
	DoubleSlash  goto 32
	PrimaryExpr  goto 18
	AbsoluteLocationPath  goto 17
	Root  goto 21
	AbbreviatedAbsoluteLocationPath  goto 22
	Step  goto 19
	AbbreviatedRelativeLocationPath  goto 20
	AxisSpecifier  goto 28
	NodeTest  goto 29
	AbbreviatedStep  goto 30
	AbbreviatedAxisSpecifier  goto 34

state 49
	AdditiveExpr:  AdditiveExpr '-'.MultiplicativeExpr 

	NUM  shift 25
	DOTDOT  shift 37
	DBLSLASH  shift 38
	FUNC  shift 26
	NODETYPE  shift 27
	AXISNAME  shift 33
	LITERAL  shift 24
	NAMETEST  shift 35
	'-'  shift 11
	'/'  shift 31
	'('  shift 23
	'.'  shift 36
	'@'  shift 39
	.  error

	MultiplicativeExpr  goto 79
	UnaryExpr  goto 9
	UnionExpr  goto 10
	PathExpr  goto 12
	LocationPath  goto 13
	FilterExpr  goto 14
	CompoundFilterExpr  goto 15
	RelativeLocationPath  goto 16
	DoubleSlash  goto 32
	PrimaryExpr  goto 18
	AbsoluteLocationPath  goto 17
	Root  goto 21
	AbbreviatedAbsoluteLocationPath  goto 22
	Step  goto 19
	AbbreviatedRelativeLocationPath  goto 20
	AxisSpecifier  goto 28
	NodeTest  goto 29
	AbbreviatedStep  goto 30
	AbbreviatedAxisSpecifier  goto 34

state 50
	MultiplicativeExpr:  MultiplicativeExpr '*'.UnaryExpr 

	NUM  shift 25
	DOTDOT  shift 37
	DBLSLASH  shift 38
	FUNC  shift 26
	NODETYPE  shift 27
	AXISNAME  shift 33
	LITERAL  shift 24
	NAMETEST  shift 35
	'-'  shift 11
	'/'  shift 31
	'('  shift 23
	'.'  shift 36
	'@'  shift 39
	.  error

	UnaryExpr  goto 80
	UnionExpr  goto 10
	PathExpr  goto 12
	LocationPath  goto 13
	FilterExpr  goto 14
	CompoundFilterExpr  goto 15
	RelativeLocationPath  goto 16
	DoubleSlash  goto 32
	PrimaryExpr  goto 18
	AbsoluteLocationPath  goto 17
	Root  goto 21
	AbbreviatedAbsoluteLocationPath  goto 22
	Step  goto 19
	AbbreviatedRelativeLocationPath  goto 20
	AxisSpecifier  goto 28
	NodeTest  goto 29
	AbbreviatedStep  goto 30
	AbbreviatedAxisSpecifier  goto 34

state 51
	MultiplicativeExpr:  MultiplicativeExpr DIV.UnaryExpr 

	NUM  shift 25
	DOTDOT  shift 37
	DBLSLASH  shift 38
	FUNC  shift 26
	NODETYPE  shift 27
	AXISNAME  shift 33
	LITERAL  shift 24
	NAMETEST  shift 35
	'-'  shift 11
	'/'  shift 31
	'('  shift 23
	'.'  shift 36
	'@'  shift 39
	.  error

	UnaryExpr  goto 81
	UnionExpr  goto 10
	PathExpr  goto 12
	LocationPath  goto 13
	FilterExpr  goto 14
	CompoundFilterExpr  goto 15
	RelativeLocationPath  goto 16
	DoubleSlash  goto 32
	PrimaryExpr  goto 18
	AbsoluteLocationPath  goto 17
	Root  goto 21
	AbbreviatedAbsoluteLocationPath  goto 22
	Step  goto 19
	AbbreviatedRelativeLocationPath  goto 20
	AxisSpecifier  goto 28
	NodeTest  goto 29
	AbbreviatedStep  goto 30
	AbbreviatedAxisSpecifier  goto 34

state 52
	MultiplicativeExpr:  MultiplicativeExpr MOD.UnaryExpr 

	NUM  shift 25
	DOTDOT  shift 37
	DBLSLASH  shift 38
	FUNC  shift 26
	NODETYPE  shift 27
	AXISNAME  shift 33
	LITERAL  shift 24
	NAMETEST  shift 35
	'-'  shift 11
	'/'  shift 31
	'('  shift 23
	'.'  shift 36
	'@'  shift 39
	.  error

	UnaryExpr  goto 82
	UnionExpr  goto 10
	PathExpr  goto 12
	LocationPath  goto 13
	FilterExpr  goto 14
	CompoundFilterExpr  goto 15
	RelativeLocationPath  goto 16
	DoubleSlash  goto 32
	PrimaryExpr  goto 18
	AbsoluteLocationPath  goto 17
	Root  goto 21
	AbbreviatedAbsoluteLocationPath  goto 22
	Step  goto 19
	AbbreviatedRelativeLocationPath  goto 20
	AxisSpecifier  goto 28
	NodeTest  goto 29
	AbbreviatedStep  goto 30
	AbbreviatedAxisSpecifier  goto 34

state 53
	UnionExpr:  UnionExpr '|'.PathExpr 

	NUM  shift 25
	DOTDOT  shift 37
	DBLSLASH  shift 38
	FUNC  shift 26
	NODETYPE  shift 27
	AXISNAME  shift 33
	LITERAL  shift 24
	NAMETEST  shift 35
	'/'  shift 31
	'('  shift 23
	'.'  shift 36
	'@'  shift 39
	.  error

	PathExpr  goto 83
	LocationPath  goto 13
	FilterExpr  goto 14
	CompoundFilterExpr  goto 15
	RelativeLocationPath  goto 16
	DoubleSlash  goto 32
	PrimaryExpr  goto 18
	AbsoluteLocationPath  goto 17
	Root  goto 21
	AbbreviatedAbsoluteLocationPath  goto 22
	Step  goto 19
	AbbreviatedRelativeLocationPath  goto 20
	AxisSpecifier  goto 28
	NodeTest  goto 29
	AbbreviatedStep  goto 30
	AbbreviatedAxisSpecifier  goto 34

state 54
	UnaryExpr:  '-' UnaryExpr.    (23)

	.  reduce 23 (src line 110)


state 55
	FilterExpr:  FilterExpr Predicate.    (32)

	.  reduce 32 (src line 139)


state 56
	Predicate:  PredicateStart.PredicateExpr PredicateEnd 

	NUM  shift 25
	DOTDOT  shift 37
	DBLSLASH  shift 38
	FUNC  shift 26
	NODETYPE  shift 27
	AXISNAME  shift 33
	LITERAL  shift 24
	NAMETEST  shift 35
	'-'  shift 11
	'/'  shift 31
	'('  shift 23
	'.'  shift 36
	'@'  shift 39
	.  error
